--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -17,7 +17,7 @@
 .tabs .tabs-list .tabs-tab {
   flex: 0 0 max-content;
   margin: 0;
-  background-color: var(--light-color);
+  background-color: var(--color-white-100);
   color: #08133C;
   font-size: var(--body-font-size-m);
   font-weight: 400;
