--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,7 @@
   --color-blue-900: #182659;
 
   --color-white: #fff;
+  --color-white-100: #f5f5f5;
   --color-white-200: #eee; /* #e9e9e9 */
   --color-gray-100: #DDDBDA; /* mayura */
   --color-gray-200: #dbdbde;
@@ -227,7 +228,7 @@ pre {
 pre {
   padding: 16px;
   border-radius: 8px;
-  background-color: var(--light-color);
+  background-color: var(--color-white-100);
   overflow-x: auto;
   white-space: pre;
 }
@@ -870,7 +871,7 @@ main .breadcrumbs {
 
 main .section.light,
 main .section.highlight {
-  background-color: var(--light-color);
+  background-color: var(--color-white-100);
   margin: 0;
   padding: 40px 0;
 }
