--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1661,7 +1661,7 @@
 }
 
 .cards.testimonial-card.swiper .swiper-slide-active {
-  background-color: var(--purple-color);
+  background-color: var(--color-purple-400);
   transform: scale(1);
   z-index: 10;
   box-shadow: 0 8px 16px 4px rgb(37 36 59 / 25%);
