--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,9 +26,9 @@
   --color-red-600:#801c1e;
   --color-red-800: #6e0a0f;
   --color-blue-200: #007bff;
-  --colos-blue-800: #2d3679;
+  --color-blue-800: #2d3679;
   --color-blue-900: #182659;
-
+  --color-purple-400: #563b80;
   --color-white: #fff;
   --color-white-100: #f5f5f5;
   --color-white-200: #eee; /* #e9e9e9 */
