--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,7 @@
   --color-gray-500: #4b4b4b;
   --color-gray-700: #25243B;
   --color-gray-900: #222;
+  --color-pewter: #7A766D;
   --color-black: #000;
 
   --gradient-translucent: linear-gradient(180deg, rgba(255, 255, 255, 0.32) 0%, rgba(255, 255, 255, 0.24) 100%);
@@ -53,7 +54,7 @@
   --gradient-indigo: linear-gradient(308deg, #110140 4.16%, #1E2A8E 44.91%, #010740 88.8%);
   --gradient-black-90: linear-gradient(90deg, rgb(0 0 0 / 0%) 0%, #000 65%);
   --gradient-black: linear-gradient(to bottom, transparent 0%, black 100%);
-  --gradient-pewter: linear-gradient(270deg, #332B28 0%, #514A44 21.11%, #8B837D 50.14%, #625A50 71.74%, #7A766D 90.18%, #433C32 100%);
+  --gradient-pewter: linear-gradient(270deg, #332B28 0%, #514A44 21.11%, #8B837D 50.14%, #625A50 71.74%, var(--color-pewter) 90.18%, #433C32 100%);
   --gradient-silver: linear-gradient(208deg, #C8C6C6 0%, #F1F0F0 53.5%, #C8C6C6 100%);
   --gradient-metal-blue: linear-gradient(308deg, #110140 4.16%, #1E2A8E 44.91%, #010740 88.8%);
   --gradient-metal-silver: linear-gradient(138deg, #999 -15.44%, #EFEFEF 0.15%, #CACACA 18.04%, #EFEFEF 37.09%, #CACACA 58.44%, #999 76.91%, #EFEFEF 87.3%);
