--- a/blocks/hero-heritage-cc/hero-heritage-cc.css
+++ b/blocks/hero-heritage-cc/hero-heritage-cc.css
@@ -157,8 +157,8 @@
 
 /* Intro section - layered on top for reveal animation */
 .hero-heritage-cc-intro {
+  top: 80px;
   position: absolute;
-  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -176,7 +176,7 @@
 .hero-heritage-cc-intro::before {
   content: '';
   position: absolute;
-  top: 0;
+  top: -80px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -317,6 +317,7 @@
   flex-direction: column;
   padding: var(--spacing-s);
   overflow-y: auto;
+  top: 90px;
 }
 
 .hero-heritage-cc .hero-heritage-cc-banner-swapped .section {
@@ -457,7 +458,6 @@
 }
 
 .hero-heritage-cc h2 {
-  color: var(--text-color-hero-heritage-cc);
   font-size: var(--heading-font-size-xs);
 }
 
@@ -474,11 +474,7 @@
 
 .hero-heritage-cc-intro-text-top, 
 .hero-heritage-cc-intro-credit-card-name {
-  background: linear-gradient(270deg, #332B28 0%, #514A44 21.11%, #8B837D 50.14%, #625A50 71.74%, #7A766D 90.18%, #433C32 100%);
-  background-clip: text;
-  /* stylelint-disable-next-line property-no-vendor-prefix */
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: rgba(0 0 0 / 0%);
+color: var(--color-pewter);
 }
 
 .hero-heritage-cc .hero-heritage-cc-intro-text-top h2,
@@ -555,7 +551,7 @@
 /* Desktop: 900px and up */
 @media (width >= 900px) {
   .hero-heritage-cc h1 {
-    font-size: var(--heading-font-size-m);
+    font-size: var(--heading-font-size-xs);
     margin: var(--spacing-xs) 0;
   }
 
