--- a/blocks/hotspot/hotspot.css
+++ b/blocks/hotspot/hotspot.css
@@ -32,9 +32,9 @@
 .hotspot-tooltip-panel {
   flex: 0 0 50%;
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 0;
+  align-items: flex-start;
+  justify-content: flex-end;
+  padding: 40px;
   position: relative;
   opacity: 0;
   visibility: hidden;
