--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1332,7 +1332,7 @@
   background: var(--color-white-100);
 }
 
-/* Swiper Pagination - Bullet Style (default) */
+/* Swiper Pagination (490-swiper had "Bullet Style (default)") */
 .cards .swiper-pagination {
   bottom: 20px;
   display: flex;
@@ -1344,7 +1344,9 @@
 .cards .swiper-pagination-bullet {
   width: 10px;
   height: 10px;
-  background: rgba(255 255 255 / 50%);
+
+  /* 490-swiper rollback: was rgba(255 255 255 / 50%); using pre-490 default */
+  background: rgba(0 0 0 / 50%);
   opacity: 1;
   transition: all 0.3s ease;
   border-radius: 50%;
@@ -1353,7 +1355,8 @@
 .cards .swiper-pagination-bullet-active {
   width: 14px;
   height: 14px;
-  background: var(--color-white);
+
+  /* 490-swiper rollback: was background: var(--color-white); - omitted to match pre-490 */
   border-radius: 50%;
 }
 
@@ -1806,6 +1809,7 @@
   .cards.joining-perks > .swiper-wrapper > .cards-card,
   .cards.joining-perks .benefit-cards {
     max-width: 326px;
+    min-height: 400px;
   }
 
   .cards.joining-perks .swiper-slide {
@@ -2002,13 +2006,6 @@
   .cards.reward-points .benefit-cards .cards-card-body .icon-arrow-right-white img {
     width: 40px;
     height: 40px;
-  }
-
-  /* Joining Perks Cards - Desktop */
-  .cards.joining-perks > .grid-cards > .cards-card,
-  .cards.joining-perks > .swiper-wrapper > .cards-card,
-  .cards.joining-perks .benefit-cards {
-    min-height: 400px;
   }
 
   .cards.joining-perks .cards-card-image img,
