--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -35,10 +35,6 @@
     padding-bottom: 20px;
 }
 
-#user-verification-modal .modal-body {
-  /* padding: 2rem; */
-}
-
 /* Form styling */
 #user-verification-form {
   width: 100%;
@@ -46,7 +42,7 @@
 
 .form-group {
   border-radius: 8px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px 0 rgb(0 0 0 / 25%);
   padding: var(--spacing-xs) 16px 16px;
   margin-bottom: 20px;
   position: relative;
