UE update for new accordion use

--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -71,7 +71,10 @@
 .section-title.center {
   text-align: center;
 }
-
 .section-title.right {
   text-align: right;
+}
+
+.section-title.left {
+  text-align: left;
 }
