--- a/blocks/hero-heritage-cc/hero-heritage-cc.css
+++ b/blocks/hero-heritage-cc/hero-heritage-cc.css
@@ -304,7 +304,7 @@
   width: 100%;
   height: 100%;
   z-index: 3;
-  transition: opacity 0.35s ease-out, transform 0.35s ease-out;
+  transition: opacity 0.35s ease-out, transform 0.35s ease-out, visibility 0.35s ease-out;
   transform: scale(1);
 }
 
